# gepe-web-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  nixpacks.toml  pyproject.toml  railway.json  regenerate_slugs.py  requirements.txt  run-dev.bat  run-dev.ps1  start.sh  update_user_role.py
scripts/: migrate_users_created_at.py
src/: config.py  database.py  main.py  utils.py
src/models/: __init__.py  address.py  cart.py  club.py  hero_media.py  newsletter_subscriber.py  notification_email.py  order.py  payment.py  product.py  product_price_settings.py  promo_banner.py  promo_banner_settings.py  unique_visit.py  user.py
src/routers/: addresses.py  cart.py  categories.py  clubs.py  contact.py  hero_media.py  newsletter.py  orders.py  payment_details.py  payments.py  products.py  promo_banner.py  returns.py  settings.py  stats.py  user.py
src/schemas/: category_schema.py  club_schema.py  hero_media_schema.py  order_schema.py  payment_detail_schema.py  payment_schema.py  product_price_settings_schema.py  product_schema.py  promo_banner_schema.py
src/services/: cloudinary_service.py  email_service.py  ranking_service.py  revalidation_service.py
